# perf-count

./: Cargo.toml
.cargo/: config
examples/: measure_cycles.rs
src/: error.rs  event.rs  lib.rs
src/linux_perf/: builder.rs  counter.rs  mod.rs
src/linux_perf/linux/: hw_breakpoint.rs  mod.rs
src/mac_perf/: builder.rs  counter.rs  error.rs  event.rs  mod.rs
