[package]
name = "perf-count"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
kperf-rs = "0.1.0"

[target.'cfg(linux)'.dependencies]
