[package]
name = "perf-count"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Simple use of performance counters with rust"
repository = "https://github.com/El-Naizin/rust-kperf/tree/main"
readme = "../README.md"
keywords = ["ffi", "perf", "kperf", "kperfdata"]
categories = ["development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
libc = "0.2"
thiserror = "1.0.56"

[target.'cfg(target_os = "macos")'.dependencies]
kperf-rs = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
mmap = "0.1.*"
nom = "4.2.3"
bitflags = "1.2.1"
